Fix toast z-index

--- a/hackerstash/static/scss/components/_toast.scss
+++ b/hackerstash/static/scss/components/_toast.scss
@@ -9,6 +9,7 @@
   right: 2rem;
   top: 2rem;
   width: 300px;
+  z-index: 2;
 
   i {
     font-size: 1.5rem;
